add credits on splash page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <body>
     <div class="container">
       <div class="row my-2">
+        <p>Bird info: <a href="https://birds.cornell.edu">eBird/Cornell Lab of Ornithology</a>.
+          Photos: <a href="https://www.flickr.com/services/feeds/docs/photos_public/">public Flickr feed</a>.
+          App: <a href="https://github.com/armandofox/birdoftheday">@armandofox</a>.
+          Hosting: <a href="https://netlify.com">Netlify</a>.
+        </p>
+      </div>
+      <div class="row my-2">
         <button id="new" class="mx-2 btn btn-success">New bird</button>
         <button id="reveal" class="mx-2 btn btn-primary">Slide paper down a bit</button>
         <button id="answer" class="mx-2 btn btn-primary">Reveal answer</button>
